handle case where graphql name != field name and we need a resolver function

--- a/internal/graphql/ts_templates/object.tmpl
+++ b/internal/graphql/ts_templates/object.tmpl
@@ -9,6 +9,7 @@
 {{ reserveDefaultImport $packagePath .Node -}}
 
 {{$node := useImport .Node -}}
+{{$nodeInstance := .NodeInstance -}}
 export const {{$node}}Type = new {{useImport "GraphQLObjectType"}}({
   name: "{{.Node}}",
   fields: (): {{useImport "GraphQLFieldConfigMap"}}<{{$node}}, {{useImport "Context"}}> => ({
@@ -19,6 +20,11 @@ export const {{$node}}Type = new {{useImport "GraphQLObjectType"}}({
         {{$ignore := useImport $import -}}
       {{end -}}
       type: {{$field.GetTSGraphQLTypeForField}},
+      {{if ne $field.GetGraphQLName $field.TsFieldName -}}
+        resolve: ({{$nodeInstance}}: {{$node}}) => {
+          return {{$nodeInstance}}.{{$field.TsFieldName}};
+        },
+      {{end -}}
     },
     {{end -}}
   }),
