--- a/internal/graphql/ts_templates/object.tmpl
+++ b/internal/graphql/ts_templates/object.tmpl
@@ -1,4 +1,4 @@
-{{reserveImport "graphql" "GraphQLSchema" "GraphQLObjectType" "GraphQLID" "GraphQLString" "GraphQLEnumType" "GraphQLNonNull" "GraphQLList" "GraphQLFloat" "GraphQLInt" "GraphQLFieldConfig" "GraphQLFieldConfigMap" "GraphQLResolveInfo"}}
+{{reserveImport "graphql" "GraphQLSchema" "GraphQLObjectType" "GraphQLInputObjectType" "GraphQLID" "GraphQLString" "GraphQLEnumType" "GraphQLNonNull" "GraphQLList" "GraphQLFloat" "GraphQLInt" "GraphQLFieldConfig" "GraphQLFieldConfigMap" "GraphQLResolveInfo" "GraphQLInputFieldConfigMap" }}
 {{reserveImport "ent/ent" "ID" }}
 {{reserveImport "src/graphql/context" "Context"}}
 {{reserveImport "ent/graphql/scalars/time" "GraphQLTime"}}
@@ -27,7 +27,7 @@
     {{ if .Exported -}}
       export interface {{.Name }} {
     {{ else -}}
-    interface {{.Name }} {
+      interface {{.Name }} {
     {{ end -}}
     {{ range .Fields -}}
       {{$type := .Type -}}
@@ -39,9 +39,13 @@
     }
   {{end}}
 
-  export const {{$gqlNode.Type}} = new {{useImport "GraphQLObjectType"}}({
+  export const {{$gqlNode.Type}} = new {{useImport $gqlNode.GQLType}}({
     name: "{{$gqlNode.Node}}",
-    fields: (): {{useImport "GraphQLFieldConfigMap"}}<{{$node}}, {{useImport "Context"}}> => ({
+    {{ if eq $gqlNode.GQLType "GraphQLInputObjectType" -}}
+      fields: (): {{useImport "GraphQLInputFieldConfigMap"}} => ({
+    {{ else -}}
+      fields: (): {{useImport "GraphQLFieldConfigMap"}}<{{$node}}, {{useImport "Context"}}> => ({
+    {{ end -}}
       {{/* TODO enum support e.g. account status */}} 
       {{ range $field := $gqlNode.Fields -}}
         {{$field.Name}}: {
@@ -75,6 +79,12 @@
     {{ $ignored := useImport $import -}}
   {{ end -}}
 {{ end -}}
+{{ range $import := $fieldConfig.ArgImports -}}
+  {{ if $baseObj.ForeignImport $import -}}
+    {{ $ignored := useImport $import -}}
+  {{ end -}}
+{{ end -}}
+
 
 {{$prefix}}: {{useImport "GraphQLFieldConfig"}}<
   undefined,
@@ -95,7 +105,11 @@
       }
     {{end -}}
   },
+  {{if $fieldConfig.ReturnTypeHint -}}
+    resolve: async (_source, args: {{$fieldConfig.Arg}}, context:{{useImport "Context"}}, _info: {{useImport "GraphQLResolveInfo"}}): {{$fieldConfig.ReturnTypeHint}} => {
+  {{ else -}}
   resolve: async (_source, args: {{$fieldConfig.Arg}}, context:{{useImport "Context"}}, _info: {{useImport "GraphQLResolveInfo"}}) => {
+  {{ end -}}
     {{range $line := $fieldConfig.FunctionContents -}}
       {{ $line }}
     {{end -}}
