have edit almost working
(remaining thing left is it thinks all fields are required)

--- a/internal/graphql/ts_templates/object.tmpl
+++ b/internal/graphql/ts_templates/object.tmpl
@@ -24,11 +24,12 @@
 {{ range $gqlNode := .GQLNodes -}}
 
   {{ range $gqlNode.Interfaces -}}
-    {{ if .Exported -}}
-      export interface {{.Name }} {
-    {{ else -}}
-      interface {{.Name }} {
+    {{ range .Extends}}
+      {{ if $baseObj.ForeignImport . -}}
+        {{$ignored := useImport . -}}
+      {{ end -}}
     {{ end -}}
+    {{.InterfaceDecl }} {
     {{ range .Fields -}}
       {{$type := .Type -}}
       {{if .UseImport -}}
