--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -216,12 +216,17 @@ export class {{$baseClass}} {
   {{ range $edge := .EdgeInfo.ForeignKeys -}}
     {{$edgeName := .CamelCaseEdgeName -}}
     {{with .NodeInfo -}}
-      load{{$edgeName}}(): Promise<{{useImport .Node}}[]> {
-        return {{useImport "loadEntsFromClause"}}(
+      async load{{$edgeName}}(): Promise<{{useImport .Node}}[]> {
+        let map = await {{useImport "loadEntsFromClause"}}(
           this.viewer, 
           {{useImport "query"}}.Eq({{$edge.QuotedDBColName}}, this.id), 
           {{useImport .Node}}.loaderOptions(),
         );
+        let results: {{useImport .Node}}[] = [];
+        map.forEach((ent) => {
+          results.push(ent);
+        })
+        return results;
       }
 
     {{end -}}
