add Context to ent as first-class citizen, remove it from src/graphql/context.ts
nothing stopping subclasses. we'll eventually need a way to pass user-defined context paths and interfaces here but this is fine for now

--- a/internal/graphql/ts_templates/object.tmpl
+++ b/internal/graphql/ts_templates/object.tmpl
@@ -1,6 +1,6 @@
 {{reserveImport "graphql" "GraphQLSchema" "GraphQLObjectType" "GraphQLInputObjectType" "GraphQLID" "GraphQLString" "GraphQLEnumType" "GraphQLNonNull" "GraphQLList" "GraphQLFloat" "GraphQLInt" "GraphQLFieldConfig" "GraphQLFieldConfigMap" "GraphQLResolveInfo" "GraphQLInputFieldConfigMap" }}
 {{reserveImport "ent/ent" "ID" }}
-{{reserveImport "src/graphql/context" "Context"}}
+{{reserveImport "ent/auth/context" "Context"}}
 {{reserveImport "ent/graphql/scalars/time" "GraphQLTime"}}
 
 {{$baseObj := . -}}
