TypeScript: custom queries and mutations (#73)
* top-level queries/mutation support

* move core auth code from manual graphql mutation to resolver

* parse potential custom files to figure out paths as needed

* custom_graphql local script

* mostly "working" state of things

run: print "User\nContact" | ts-node --project '/Users/ola/code/ent/ts/examples/simple/tsconfig.json' -r tsconfig-paths/register src/scripts/custom_graphql.ts --path  '/Users/ola/code/ent/ts/examples/simple/src/'

not totally working since the process doesn't hang. is there a dangling promise? or the complicated mess here leading to issues?

fix working issue by removing index.ts...

* convert from Map to {} before json encode

* codegen the graphql mutation and call the existing code

* instead of harcoding paths in generated code, we should use relative paths

* decouple fileImport away from queryGQLDatum

GraphQLType didn't make sense for most of the uses

* s/queryGQLDatum/rootField

references "root" fields on query/mutation

this is technically false since query/mutation are the root fields not this

* fix generated import paths when reserved separately

now the import lines are collapsed into one

* change format of fields to be nested so that we're not going through all the fields to process (TS edition)

* update go code to read the new fields format

* refactor to support custom queries and start with viewer type

* make custom methods in new objects work

e.g. Viewer type having a user field

plus move some code around

* respect when the type of the node in graphql is different from the class

* reserve and use imports for things needed in the custom interfaces instead of hardcoding "ID"

--- a/internal/graphql/ts_templates/object.tmpl
+++ b/internal/graphql/ts_templates/object.tmpl
@@ -7,11 +7,11 @@
 
 {{/* import types that we may need e.g. UserType, ContactType, etc */}}
 {{ range $baseObj.Imports -}} 
-  {{reserveImport .ImportPath .GraphQLType}}
+  {{reserveImport .ImportPath .Type}}
 {{ end -}}
 
 {{ range $baseObj.DefaultImports -}} 
-  {{reserveDefaultImport .ImportPath .GraphQLType}}
+  {{reserveDefaultImport .ImportPath .Type}}
 {{ end -}}
 
 {{ range $baseObj.Interfaces -}}
@@ -33,8 +33,10 @@
 {{end}}
 
 {{/* these 2 probably need to change */}}
-{{$node := useImport .NodeData.Node -}}
-{{$nodeInstance := .NodeData.NodeInstance -}}
+{{/* TODO these definitely need to change now */}}
+{{/* node and nodeInstance don't make sense for non-ents e.g. custom types...*/}}
+{{$node := useImport .Node -}}
+{{$nodeInstance := .NodeInstance -}}
 
 {{ range $gqlNode := .GQLNodes -}}
 
@@ -43,22 +45,22 @@
     {{ if eq $gqlNode.GQLType "GraphQLInputObjectType" -}}
       fields: (): {{useImport "GraphQLInputFieldConfigMap"}} => ({
     {{ else -}}
-      fields: (): {{useImport "GraphQLFieldConfigMap"}}<{{$node}}, {{useImport "Context"}}> => ({
+      fields: (): {{useImport "GraphQLFieldConfigMap"}}<{{$gqlNode.TSType}}, {{useImport "Context"}}> => ({
     {{ end -}}
       {{/* TODO enum support e.g. account status */}} 
       {{ range $field := $gqlNode.Fields -}}
         {{$field.Name}}: {
           {{range $import := $field.FieldImports -}}
-            {{ if $baseObj.ForeignImport $import -}}
-              {{$ignore := useImport $import -}}
+            {{ if $baseObj.ForeignImport $import.Type -}}
+              {{$ignore := useImport $import.Type -}}
             {{end -}}
           {{end -}}
           type: {{$field.FieldType}},
           {{if $field.HasResolveFunction -}}
             {{if $field.HasAsyncModifier -}}
-              resolve: async({{$nodeInstance}}: {{$node}}) => {
+              resolve: async({{$nodeInstance}}: {{$gqlNode.TSType}}) => {
             {{ else -}}
-              resolve: ({{$nodeInstance}}: {{$node}}) => {
+              resolve: ({{$nodeInstance}}: {{$gqlNode.TSType}}) => {
             {{ end -}}
               {{$field.FunctionContents}};
             },
