--- a/internal/graphql/ts_templates/root.tmpl
+++ b/internal/graphql/ts_templates/root.tmpl
@@ -1,14 +1,14 @@
 {{reserveImport "graphql" "GraphQLSchema" "GraphQLObjectType" "GraphQLID" "GraphQLString" "GraphQLEnumType" "GraphQLNonNull" "GraphQLList" "GraphQLFloat" "GraphQLInt" "GraphQLFieldConfig" "GraphQLFieldConfigMap" "GraphQLResolveInfo"}}
 
-{{ range $query := .Queries -}} 
-  import { {{$query.GraphQLType}} } from "{{$query.ImportPath}}";
+{{ range $field := .RootFields -}} 
+  import { {{$field.Type}} } from "{{$field.ImportPath}}";
 {{ end }}
 
 export const {{.Type}} = new {{useImport "GraphQLObjectType"}}({
   name: "{{.Node}}",
   fields: () => ({
-    {{ range $query := .Queries -}} 
-      {{$query.GraphQLName}}: {{$query.GraphQLType}},
+    {{ range $field := .RootFields -}} 
+      {{$field.Name}}: {{$field.Type}},
     {{ end -}}
   }),
 });
