TS: per-request data cache (#77)
* loader in ContextCache gotten from Viewer which is tied to each request

next is to handle everything that happens in the simple query i constructed and eliminate all the repetitive queries that are currently happening

* commit hanging changes

* loadEdges2 per-request cache

* loadEdges and loadEdgeForID2 cached

* cache all the queries

* remove most of the console.logs

* loadRow and loadRows tests

* tests for loadEnt + move some things around

e.g. bunch up similar code in ent.ts

* confirm that loadEnt shares data but respects privacy

* loadEnt tests

* loadEnts and loadEntsFromClause

* loadEntsFromClause

* writes

* fix executor.test.ts tests

* rename Context and ContextLite

Context -> RequestContext
ContextLite -> Context

* fix object.tmpl to generate the right code wrt RequestContext

* some cleanup

* more cleanup

* remove loaders file

we generate on demand so no need for this

* auth cleanup

* even more cleanup

* IDViewer consolidation

* change RequestContext to Context

* address TODOs in loadRawEdgeCountX and loadUniqueEdge

--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -167,10 +167,11 @@ export class {{$baseClass}} {
      {{/* TODO unique edges */}}
      {{ if $uniqueEdge -}}
       load{{$edgeName}}Edge(): Promise<{{$assocEdgeType}} | null> {
-        return {{useImport "loadUniqueEdge"}}(
-          this.id, 
-          {{$edgeType}}.{{$edge.TsEdgeConst}},
-        );
+        return {{useImport "loadUniqueEdge"}}({
+          id1: this.id, 
+          edgeType: {{$edgeType}}.{{$edge.TsEdgeConst}},
+          context: this.viewer.context,
+        });
       }
 
       load{{$edgeName}}(): Promise<{{.Node}} | null> {
@@ -184,10 +185,11 @@ export class {{$baseClass}} {
 
      {{ else -}}
       load{{$edgeName}}Edges():Promise<{{$assocEdgeType}}[]> {
-        return {{useImport "loadEdges"}}(
-          this.id, 
-          {{$edgeType}}.{{$edge.TsEdgeConst}},
-        );
+        return {{useImport "loadEdges"}}({
+          id1:this.id, 
+          edgeType: {{$edgeType}}.{{$edge.TsEdgeConst}},
+          context: this.viewer.context,
+        });
       }
 
       load{{$edgeName}}():Promise<{{useImport .Node}}[]> {
@@ -200,18 +202,20 @@ export class {{$baseClass}} {
       }
 
       load{{$edgeName}}RawCountX():Promise<number> {
-        return {{useImport "loadRawEdgeCountX"}}(
-          this.id, 
-          {{$edgeType}}.{{$edge.TsEdgeConst}},
-        );
+        return {{useImport "loadRawEdgeCountX"}}({
+          id1: this.id, 
+          edgeType: {{$edgeType}}.{{$edge.TsEdgeConst}},
+          context: this.viewer.context,
+        });
       }
 
       load{{$edge.Singular}}EdgeFor(id2: {{$idType}}):Promise<{{$assocEdgeType}}|undefined> {
-        return {{useImport "loadEdgeForID2"}}(
-          this.id, 
-          {{$edgeType}}.{{$edge.TsEdgeConst}}, 
+        return {{useImport "loadEdgeForID2"}}({
+          id1: this.id, 
+          edgeType: {{$edgeType}}.{{$edge.TsEdgeConst}}, 
           id2,
-        );
+          context: this.viewer.context,
+        });
       }
      {{end}}
     {{end -}}
